--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <frameset rows="100px, *, 222px" frameborder="1">
     <frame src="frames/header-frame.html" name="header" noresize>
     <frameset cols="100px, *, 100px">
-        <frame src="frames/sidebar-frame.html" name="sidebar" noresize>
+        <frame src="frames/navigation-frame.html" name="sidebar" noresize>
         <frame src="frames/content-frame.html" name="content" noresize>
         <frame src="frames/ad-frame.html" name="ad" noresize>
     </frameset>
