--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <frame>
         <frame src="frames/navigation-frame.html" name="sidebar" noresize>
         <frame>
-        <frame src="frames/content-frame.html" name="content" noresize>
+        <frame src="frames/content/bac/2019/training-test-frame.html" name="content" noresize>
         <frame>
         <frame src="frames/ad-frame.html" name="ad" scrolling="no" noresize>
         <frame>
