--- a/frames/header-frame.html
+++ b/frames/header-frame.html
@@ -7,10 +7,10 @@
 </head>
 <body style="margin: 0">
     <table width="100%" align="center" cellspacing="0">
-        <tr  height="100px" bgcolor="black">
+        <tr  height="100px" bgcolor="#13779B">
             <td></td>
             <td width="1180px">
-                <a href="../index.html">
+                <a href="../" target="_top">
                     <img width="50px" src="../assets/images/logo-white.png" alt="FT">
                 </a>
             </td>
