Fixed footer link 2

--- a/frames/footer-frame.html
+++ b/frames/footer-frame.html
@@ -11,7 +11,7 @@
             <tr height="21px"></tr>
             <tr height="180px" valign="top">
                 <td></td>
-                <td width="980px" onclick="window.open('/WEBLab5', '_top')">
+                <td width="980px" onclick="window.open('../', '_top')">
                     <font face="Calibri" color="white" size="2">
                         <table cellspacing="0">
                             <tr valign="top">
